State Tree Camera

--- a/Yabw.uplugin
+++ b/Yabw.uplugin
@@ -25,6 +25,11 @@
       "Name": "GameplayCameras",
       "Enabled": true,
       "Optional": false
+    },
+    {
+      "Name": "Wynaut",
+      "Enabled": true,
+      "Optional": false
     }
   ]
 }
